# xorrox

./: xorrox.cabal
executable/: Main.hs
