name:                xorrox
version:             0.0.0.0
synopsis:            secure message
description:         test package
homepage:            
author:              
maintainer:          
copyright:           ©2024
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library 
  hs-source-dirs:      library
  exposed-modules:     Canonical
                     , Heretical
                     , Alphabets
  other-modules:
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable xerxes
  hs-source-dirs:      executable
  main-is:             Main.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  xorrox


-- test-suite xorrox-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--                      , hspec
--                      , QuickCheck
--                      , xorrox

source-repository head
  type:     git
  location: https://github.com/user/xorrox.git
